Added guzzle to dependencies

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "require": {
-        "ircmaxell/password-compat": "dev-master",
-        "mandrill/mandrill": "dev-master",
+	"guzzlehttp/guzzle": "4.*",
     	"php": ">=5.5",
-        "tracy/tracy": "2.3.*@dev",
         "twig/twig": "1.*",
-        "znarkus/postmark": "dev-master"
+        "tracy/tracy": "2.3.*@dev",
+        "znarkus/postmark": "dev-master",
+        "mandrill/mandrill": "dev-master",
+        "ircmaxell/password-compat": "dev-master"
     }
 }
